# nobby

./: .gitignore  CMakeLists.txt  README.md  config.h.in
nobby/: CMakeLists.txt  gcode_parser.cpp  gcode_parser.h  main.cpp
src/arch/x86_64/: grub.cfg  linker.ld
test/: CMakeLists.txt  Makefile  test_gcode_parser  test_gcode_parser.cpp
